--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@ main section > div {
 				<ul>
 					<li>2008年12月通过全国英语等级考试四级考试</li>
 					<li>2009年9月通过全国计算机二级考试</li>
-					<li>熟练掌握HTML(5)、CSS(3)、JavaScript、jQuery、BootStrap，熟悉浏览器兼容技术和前端性能优化</li>
-					<li>数据库：mysql、redis、mongodb，熟悉数据库的优化</li>
-					<li>熟练掌握PHP、ThinkPHP、swoole、workerman、dedeCMS，MVC开发模式及OOP开发思想，熟悉性能优化和安全优化</li>
-					<li>熟悉liunx系统操作、docker容器技术,掌握微信小程序开发，了解vue.js</li>
-					<li>掌握Node.js、Express框架、koa框架以及MVC & MVVM设计模式与模块化开发流程</li>
-					<li>掌握python、django、flask、tornado、scrapy爬虫框架</li>
-					<li>熟悉Git版本管理、webpack、Sublime、Notepad++、PhotoShop等相关开发工具</li>
+					<li>熟练掌握HTML、CSS、JavaScript、jQuery、BootStrap，熟悉浏览器兼容技术和前端性能优化</li>
+					<li>熟练掌握PHP、ThinkPHP、swoole、workerman、dedeCMS，熟悉面向对象编程、性能优化和安全优化</li>
+					<li>掌握Node.js、Express框架、koa框架</li>
+					<li>掌握Python、Django框架、Flask框架、Scrapy爬虫框架</li>
+					<li>数据库：MySQL、Redis、MongoDb、SQLite，熟悉数据库的优化</li>
+					<li>熟悉liunx开发环境、docker容器技术,掌握微信小程序开发，了解vue.js</li>
+					<li>熟悉Git版本管理、webpack、Sublime、PhotoShop等相关开发工具</li>
 				</ul>
 			</div>
 		</section>
