--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@ main section > div {
     </div>
     <ul class="aside_details">
       <li>李柏林</li>
+      <li><i class="fa fa-compass"></i> 求职意向：前端开发、php开发</li>
       <li><i class="fa fa-phone"></i> 15107384435</li>
       <li><i class="fa fa-envelope-o"></i> 465137869@qq.com</a></li>
       <li><i class="fa fa-location-arrow"></i> 长沙市岳麓区</li>
       <li><i class="fa fa-github"></i> <a href="https://github.com/berlin75/" style="text-decoration: none;color:#fff;">https://github.com/berlin75/</a></li>
     </ul>
-
   </aside>
 
   <main>
