--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ main section > div {
 
   <main>
     <ul class="main_top">
-      <li><a href="liberlin.doc" download="李柏林的简历.doc"><i class="fa fa-download""></i> 下载</a></li>
+      <li><a href="liberlin.doc" download="李柏林-前端-php.doc"><i class="fa fa-download""></i> 下载</a></li>
       <li><a href="#" onclick="print();return false"><i class="fa fa-print"></i> 打印</a></li>
     </ul>
     <section class="about">
