--- a/index.html
+++ b/index.html
@@ -196,14 +196,13 @@ main section > div {
       <h3 class="clr1">专业技能 <span>Professional Skills</span></h3>
       <div class="skill_info">
         <ul>
-          <li>熟练掌握HTML、CSS、JavaScript、jQuery、BootStrap，熟悉浏览器兼容技术和前端性能优化</li>
-          <li>熟悉Taro框架开发多端统一的前端项目，熟悉微信小程序开发、react、vue.js</li>
-          <li>熟练掌握PHP、ThinkPHP、swoole、workerman、dedeCMS，熟悉面向对象编程、性能优化和安全优化</li>
-          <li>熟悉Node.js、Express框架、koa框架</li>
-          <li>熟悉Python、Django框架、Flask框架、Scrapy爬虫框架</li>
-          <li>数据库：MySQL、Redis、MongoDb、SQLite，熟悉数据库的优化</li>
-          <li>熟悉liunx开发环境、docker容器技术</li>
-          <li>熟悉Git版本管理、webpack、VsCode、Sublime等相关开发工具</li>
+          <li>熟悉HTML、CSS、JS、小程序、Taro、vue.js</li>
+          <li>熟悉PHP、ThinkPHP5，了解Laravel、swoole，熟悉面向对象编程、性能和安全优化</li>
+          <li>熟悉Node.js、Express，了解koa</li>
+          <li>熟悉Python、Django，了解Flask、Scrapy</li>
+          <li>数据库：MySQL、Redis、MongoDb、SQLit</li>
+          <li>熟悉liunx、docker</li>
+          <li>熟悉Git、sublime、VsCode、phpstorm等工具</li>
           <li>2008年12月通过全国英语等级考试四级考试</li>
           <li>2009年9月通过全国计算机二级考试</li>
         </ul>
