--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ main section > div {
 
   <main>
     <ul class="main_top">
-      <li><a href="liberlin.doc" download="李柏林-前端-php.doc"><i class="fa fa-download""></i> 下载</a></li>
+      <li><a href="liberlin.doc" download="李柏林-php.doc"><i class="fa fa-download""></i> 下载</a></li>
       <li><a href="#" onclick="print();return false"><i class="fa fa-print"></i> 打印</a></li>
     </ul>
     <section class="about">
@@ -221,6 +221,11 @@ main section > div {
             </ul>
             <p>相关技术：</p>
             <p style="text-indent: 2rem;">taro、react、redux、javascript、css、scss</p>
+          </li>
+          <li>
+            <p>PHP项目经历</p>
+            <p>使用ThinkPHP5.1开发前后端分离的博客类CMS</p>
+            <p>功能模块：rbac权限管理，JWT、无限极分类，评论管理、mysql数据库备份还原、数据字典、文件上传、发送邮件等</p>
           </li>
         </ul>
       </div>
